--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ pinecone-client = "==5.0.1"
 watchdog = "==3.0.0"
 tiktoken = "==0.7.0"
 uuid = "==1.30"
-langfuse = "==1.0.18"
+langfuse = "==2.59.7"
 backoff = "==2.2.1"
 redis = "==5.0.3"
 azure-storage-blob = "==12.19.1"
@@ -38,9 +38,10 @@ prophet = "==1.1.5"
 boto3 = "==1.34.140"
 langgraph = "==0.2.13"
 langchainhub = "==0.1.21"
-gpt-researcher = "==0.9.0"
 pytesseract = "*"
 pillow = "*"
+jira = "==3.10.5"
+pydantic = ">=2.7.4,<3.0.0"
 
 [dev-packages]
 
